src-ken&y/objects/Invoice_Grouping_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Billing_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing UOM</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UOM__c.Type__c</field>
                <operation>equals</operation>
                <value>Time</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Invoice Grouping Rules</relationshipLabel>
        <relationshipName>Invoice_Grouping_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Invoice Grouping Rules</relationshipLabel>
        <relationshipName>Invoice_Grouping_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>It is an open ended date. If left empty it implies this rule is always active.</inlineHelpText>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>For_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use checkbox to group invoices by Agreement OR use field For Agreement</inlineHelpText>
        <label>For Agreement</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <errorMessage>Agreement must be approved and have the same company as the grouping rule.</errorMessage>
            <filterItems>
                <field>Agreement__c.Status__c</field>
                <operation>equals</operation>
                <value>Approved</value>
            </filterItems>
            <filterItems>
                <field>Agreement__c.Customer__r.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <filterItems>
                <field>Agreement__c.Customer__r.Company__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Invoice Grouping Rules</relationshipLabel>
        <relationshipName>Invoice_Grouping_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>For_Agreements__c</fullName>
        <label>For Agreements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>For_Categories__c</fullName>
        <label>For Categories</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>For_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Group by Category OR for specific Category OR by Product OR for specific Product</inlineHelpText>
        <label>For Category</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Category must have the same company as that on grouping rule</errorMessage>
            <filterItems>
                <field>$Source.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Invoice Grouping Rules (For Category)</relationshipLabel>
        <relationshipName>Invoice_Grouping_Rules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>For_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select a customer hierarchy level OR use this field to enter a specific customer. You can combine multiple selections in a rule but you must specify criteria for the customer level at least.</inlineHelpText>
        <label>For Customer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <errorMessage>Customer must be approved and must belong to the same company on the Grouping Rule</errorMessage>
            <filterItems>
                <field>Customer__c.Status__c</field>
                <operation>equals</operation>
                <value>Approved</value>
            </filterItems>
            <filterItems>
                <field>Customer__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <filterItems>
                <field>Customer__c.Company__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Invoice Grouping Rules</relationshipLabel>
        <relationshipName>Invoice_Grouping_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>For_Customers__c</fullName>
        <label>For Customers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>For_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Group by Category OR for specific Category OR by Product OR for specific Product</inlineHelpText>
        <label>For Product</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Product__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <filterItems>
                <field>Product__c.Company__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Invoice Grouping Rules</relationshipLabel>
        <relationshipName>Invoice_Grouping_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>For_Products__c</fullName>
        <label>For Products</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Group_By_Agreements__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use checkbox to group invoices by Agreement OR use field For Agreement</inlineHelpText>
        <label>Group By Agreements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_By_Category__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Group by Category OR for specific Category OR by Product OR for specific Product</inlineHelpText>
        <label>Group By Categories</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_By_Customer_Hierarchy__c</fullName>
        <inlineHelpText>Use checkbox to select a customer hierarchy level OR use field to enter a specific customer. You can combine multiple selections in a rule but you must specify criteria for the customer level at least.</inlineHelpText>
        <label>Group By Customer Hierarchy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate Parent</fullName>
                </value>
                <value>
                    <fullName>Bill To</fullName>
                </value>
                <value>
                    <fullName>Sold To</fullName>
                </value>
                <value>
                    <fullName>Ship To</fullName>
                </value>
                <value>
                    <fullName>Site</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_By_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Group by Category OR for specific Category OR by Product OR for specific Product</inlineHelpText>
        <label>Group By Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_By_Sales_Order_If__c</fullName>
        <inlineHelpText>Use only if Group by Sales Orders or Group by Sales Order Types is selected. Invoice only when entire sales order is closed, sales order line is closed, or leave blank to invoice whenever fulfillment records are generated.</inlineHelpText>
        <label>Group By Sales Order If</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Order is closed</fullName>
                </value>
                <value>
                    <fullName>Order line is closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_By_Sales_Order_Types__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group By Sales Order Types</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_By_Sales_Orders__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Group by Sales Orders OR by Sales Order Types OR by Shipments</inlineHelpText>
        <label>Group By Sales Orders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_By_Shipments__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Group by Sales Orders OR by Sales Order Types OR by Shipments</inlineHelpText>
        <label>Group By Shipments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <formula>and(Start_Date__c &lt;= now()  ,  or( ISBLANK(End_Date__c) ,(End_Date__c &gt;now())))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Valid__c</fullName>
        <formula>OR(NOT(ISBLANK(For_Agreement__c )),
NOT(ISBLANK( For_Category__c )), 
NOT(ISBLANK( For_Customer__c )), 
NOT(ISBLANK( For_Product__c )), 
Group_By_Agreements__c, 
NOT(ISBLANK( TEXT(Group_By_Customer_Hierarchy__c) )), 
Group_By_Sales_Orders__c, 
Group_By_Sales_Order_Types__c, 
Group_By_Shipments__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checked if at least one grouping criteria is selected.</inlineHelpText>
        <label>Is Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rank_Key__c</fullName>
        <inlineHelpText>This stores a key of Company and rank to ensure uniqueness.</inlineHelpText>
        <label>Rank Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <inlineHelpText>Rank determines the order in which rules will be matched against fulfillments.</inlineHelpText>
        <label>Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recurrence_Start_Date__c</fullName>
        <label>Recurrence Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rule_Description__c</fullName>
        <description>Rule description in text format</description>
        <label>Rule Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>The date from which the rule is active</inlineHelpText>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Use_Billing_Frequency_on_Fulfillment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Billing Frequency on Fulfillment</label>
        <type>Checkbox</type>
    </fields>
    <label>Invoice Grouping Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Is_Valid__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Rank__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IGR-{0000000000}</displayFormat>
        <label>Invoice Grouping Rule</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Grouping Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Billing_by_time_intervals</fullName>
        <active>true</active>
        <errorConditionFormula>( ISBLANK(Billing_UOM__c) &amp;&amp; NOT( ISBLANK(Recurrence_Start_Date__c) ) ) ||
( ISBLANK(Recurrence_Start_Date__c) &amp;&amp; NOT( ISBLANK(Billing_UOM__c) ) )</errorConditionFormula>
        <errorMessage>To establish a time based billing cycle please specify both billing uom and recurrence start date. To establish an immediate billing cycle please leave both fields empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Check_Both_Sales_Orders_Grouping</fullName>
        <active>true</active>
        <errorConditionFormula>AND(AND(Group_By_Sales_Order_Types__c , NOT(ISPICKVAL(Group_By_Sales_Order_If__c ,&quot;&quot;))) ,
Group_By_Sales_Orders__c)</errorConditionFormula>
        <errorMessage>Cannot set both sales order groupings.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Select_Both_Agreement_Grouping</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  Group_By_Agreements__c ,
    NOT(ISBLANK(  For_Agreements__c  )))</errorConditionFormula>
        <errorMessage>Cannot set both group by agreements and for agreement fields for a given rule</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Select_Both_Customer_Grouping</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(  TEXT(Group_By_Customer_Hierarchy__c))),
    NOT(ISBLANK( For_Customers__c )))</errorConditionFormula>
        <errorMessage>Cannot populate both group by and for customer fields for a given rule</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cant_set_SO_conditions_if_not_grouped</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Group_By_Sales_Orders__c = false, Group_By_Sales_Order_Types__c = false, not(isblank( Text(Group_By_Sales_Order_If__c))))</errorConditionFormula>
        <errorDisplayField>Group_By_Sales_Order_If__c</errorDisplayField>
        <errorMessage>Cannot set this picklist if neither group by sales order or order types is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cant_set_bill_on_fulfillments</fullName>
        <active>true</active>
        <errorConditionFormula>Group_By_Agreements__c = false &amp;&amp; (ISNULL(For_Agreements__c)|| ISBLANK(For_Agreements__c)) &amp;&amp; Group_By_Sales_Orders__c = false &amp;&amp;  
Use_Billing_Frequency_on_Fulfillment__c =true</errorConditionFormula>
        <errorMessage>Billing frequency on fulfillments is only supported for grouping by sales orders and agreements</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cant_set_both_category_and_product</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT( ISBLANK( For_Products__c ) ) ,NOT( ISBLANK(  For_Categories__c  ) ))</errorConditionFormula>
        <errorMessage>Cannot set both category and product grouping criteria.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_Select_One_Customer_Grouping</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(  TEXT(Group_By_Customer_Hierarchy__c)),ISBLANK( For_Customers__c ))</errorConditionFormula>
        <errorMessage>Must select one customer grouping for a given rule</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Order_Type_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Group_By_Sales_Orders__c  = FALSE,  Group_By_Shipments__c = FALSE,  Group_By_Sales_Order_Types__c = FALSE)</errorConditionFormula>
        <errorMessage>Must select at least &apos;Group By Sales Order Type&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_is_Required</fullName>
        <active>true</active>
        <description>Start Date is required.</description>
        <errorConditionFormula>ISNULL(Start_Date__c )</errorConditionFormula>
        <errorMessage>Start Date is required.</errorMessage>
    </validationRules>
</CustomObject>